@@ -157,5 +157,6 @@ void genIcons()
       icons[keys_ICON]       = new QIcon(":/data/keyboard.svg");
       icons[tie_ICON]        = new QIcon(":/data/tie.svg");
       icons[window_ICON]     = new QIcon(":/data/mscore.xpm");
+      icons[community_ICON]     = new QIcon(":/data/community.svg");
       }
 
