@@ -1,5 +1,8 @@
 1.jul  (la)
       - fix printing of images (fix #10140: Save as PDF with several images causes crash)
+      - implement MuseScore Connect
+      - reduce default reverb gain from 0.5 to 0.2
+      - open MuseScore maximize on very first startup
 30.jun (la)
       - fix #11267: Shift + drag tuplet, delete, undo cause crash 
 29.jun (ws)
